force-app/main/default/objects/Component__c/Component__c.object-meta.xml
<CustomObject>
    <description>Systems, objects, fields and other elements that may be connected across the enterprise</description>
    <label>Component</label>
    <nameField>
        <label>Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>