force-app/main/default/objects/Component__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>User-friendly label</description>
    <inlineHelpText>User-friendly label</inlineHelpText>
    <label>Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>