force-app/main/default/objects/Component__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Component</label>
    <referenceTo>Component__c</referenceTo>
    <relationshipLabel>Child Components</relationshipLabel>
    <relationshipName>ChildComponents</relationshipName>
    <type>Lookup</type>
</CustomField>