force-app/main/default/objects/Component__c/fields/UniqueName__c.field-meta.xml
<CustomField>
    <fullName>UniqueName__c</fullName>
    <description>Name that uniquely identifies this component within an account. If no unique name is given, a unique name is inferred based on the name of component and the unique name of the parent component. See the &quot;Handle New Record&quot; workflow rule.</description>
    <inlineHelpText>Name that uniquely identifies this component within an account</inlineHelpText>
    <label>Unique Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>